<!--
  ~ Copyright (C) 2018 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">GitHub Repository Search</string>
    <string name="loading">Loading</string>
    <string name="language">Language: %s</string>
    <string name="no_results">No results 😓</string>
    <string name="unknown">\?</string>
    <string name="retry">Retry</string>
    <string name="stars">Stars</string>
    <string name="forks">forks</string>
    <string name="clear_database">Clear Database</string>
    <string name="enter_repository_name">Search for repositories</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
